# breo

./: .gitignore  Cargo.toml  README.md  TODO.md  install.sh  prek.toml  save_core_files.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  deploy-pages.yml  release.yml
crates/core/: Cargo.toml  README.md
crates/core/examples/: basic_usage.rs
crates/core/src/: automerge_wrapper.rs  error.rs  lib.rs  records.rs  repo.rs  snapshot.rs  traits.rs  types.rs
crates/wasm/: Cargo.toml  README.md  TESTING.md  example.html
crates/wasm/src/: api.rs  clock.rs  crypto.rs  error.rs  indexeddb.rs  lib.rs  storage.rs  webcrypto.rs
docs/: BUILD.md  SECURITY.md  TESTING.md
scripts/: check_coverage.sh  install.sh  release.py  release_notes.py
specs/: claws.allium  conversation.allium  cron.allium  loop.allium  sandbox.allium  shell-config.allium
src/: claws.rs  config.rs  conversation.rs  loop_cmd.rs  main.rs  prompt.rs  sandbox.rs
webapp/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
webapp/src/: main.js  main.ts
