[package]
name = "breo"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for AI-assisted development workflows"
license = "Apache-2.0"
repository = "https://github.com/antonmry/breo"
homepage = "https://github.com/antonmry/breo"
readme = "README.md"
keywords = ["cli", "ai", "llm", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["PLAN.md", "RESULT.md", "VERIFICATION.md", "TODO.md", ".github/", "prek.toml", ".rumdl.toml", "install.sh"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/breo-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "breo"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
skim = { version = "2.0.2", default-features = false }
toml = "0.8"
