[package]
name = "breo"
version = "0.2.1"
edition = "2024"
description = "A CLI tool for AI-assisted development workflows"
license = "Apache-2.0"
repository = "https://github.com/antonmry/breo"
homepage = "https://github.com/antonmry/breo"
readme = "README.md"
keywords = ["cli", "ai", "llm", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["PLAN.md", "RESULT.md", "VERIFICATION.md", "TODO.md", ".github/", "prek.toml", ".rumdl.toml", "scripts/"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/breo-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "breo"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
skim = { version = "2.0.2", default-features = false }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3"
