[package]
name = "pds-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Automerge for CRDT support
automerge = "0.6"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# CID support
multihash = "0.19"
unsigned-varint = "0.8"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Base64 encoding
base64 = "0.22"

[dev-dependencies]
# Testing utilities
tokio = { version = "1.0", features = ["full"] }
