[package]
name = "pds-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
# Core PDS library
pds-core = { path = "../core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Storage",
    "CryptoKey",
    "SubtleCrypto",
    "Crypto",
    "CryptoKeyPair",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbCursorWithValue",
    "IdbKeyRange",
    "DomException",
] }

# Error handling
thiserror = "1.0"

# Async support
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Base64 for key encoding
base64 = "0.22"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Force uuid to use js feature for WASM support (required by automerge)
[dependencies.uuid]
version = "1.0"
features = ["js"]
